fix headers contrast

--- a/src/global.css
+++ b/src/global.css
@@ -96,6 +96,7 @@
   margin: 0;
   padding: 0;
   font-weight: 700;
+  filter: contrast(.8) brightness(1.2);
 }
 
 [data-nu-root] h1 {
